fixed wrong username and text overflow

--- a/src/styles/_academy.scss
+++ b/src/styles/_academy.scss
@@ -719,6 +719,8 @@
   margin: auto;
   color: rgba(0, 0, 0, 0.7);
   text-wrap: nowrap;
+  text-overflow: ellipsis;
+  max-width: 90%;
 
   &.grading-badge-xs {
     padding: 0.25rem 0.6rem;
